[gd_scene format=3 uid="uid://ciktj4k4ygngx"]

[ext_resource type="Script" uid="uid://l5a05osfxb5" path="res://scripts/Ronins/character_ronin.gd" id="1_mwkte"]
[ext_resource type="Texture2D" uid="uid://7vj2r0f7xrvc" path="res://sprites/Ronin/Sword/#1/Hat_Ronin_Attack.png" id="2_uxbe1"]
[ext_resource type="Texture2D" uid="uid://d3vxntx1w0770" path="res://sprites/Ronin/Sword/#1/Ronin_Hat_Breathing.png" id="3_uxbe1"]
[ext_resource type="Texture2D" uid="uid://c8ql1fak3oq3q" path="res://sprites/Ronin/Sword/#1/up_attack.png" id="3_vaxsq"]
[ext_resource type="Texture2D" uid="uid://b1vlg53rlb71c" path="res://sprites/Ronin/Sword/#1/Hat_Ronin_Walking.png" id="4_uitew"]
[ext_resource type="Texture2D" uid="uid://kw2ncpnw12wt" path="res://sprites/Ronin/Sword/#1/Hat_Ronin_Jump.png" id="4_vaxsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njcak"]
size = Vector2(11, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaxsq"]
atlas = ExtResource("2_uxbe1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8stl"]
atlas = ExtResource("2_uxbe1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26xmp"]
atlas = ExtResource("2_uxbe1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l8bd"]
atlas = ExtResource("2_uxbe1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2j4t"]
atlas = ExtResource("2_uxbe1")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uercj"]
atlas = ExtResource("2_uxbe1")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8xnh"]
atlas = ExtResource("2_uxbe1")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vus72"]
atlas = ExtResource("2_uxbe1")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_detjv"]
atlas = ExtResource("2_uxbe1")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tco28"]
atlas = ExtResource("2_uxbe1")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cliih"]
atlas = ExtResource("2_uxbe1")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2gok"]
atlas = ExtResource("2_uxbe1")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnorp"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba8qv"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7jmj"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvifs"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs04u"]
atlas = ExtResource("2_uxbe1")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1phrj"]
atlas = ExtResource("2_uxbe1")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lebdl"]
atlas = ExtResource("2_uxbe1")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuka5"]
atlas = ExtResource("2_uxbe1")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7rf8"]
atlas = ExtResource("3_vaxsq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u5hy"]
atlas = ExtResource("3_vaxsq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6v2d"]
atlas = ExtResource("3_vaxsq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eii6h"]
atlas = ExtResource("3_vaxsq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_riox4"]
atlas = ExtResource("3_vaxsq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw3w7"]
atlas = ExtResource("3_vaxsq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3i25"]
atlas = ExtResource("3_vaxsq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxx1"]
atlas = ExtResource("3_vaxsq")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5nhw"]
atlas = ExtResource("3_vaxsq")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvgke"]
atlas = ExtResource("3_vaxsq")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ohus"]
atlas = ExtResource("3_uxbe1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya12j"]
atlas = ExtResource("3_uxbe1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab8l7"]
atlas = ExtResource("3_uxbe1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psopo"]
atlas = ExtResource("4_vaxsq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu7nl"]
atlas = ExtResource("4_vaxsq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyd6y"]
atlas = ExtResource("4_vaxsq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxbe1"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uitew"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_20c48"]
atlas = ExtResource("2_uxbe1")
region = Rect2(1408, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_juo2j"]
atlas = ExtResource("4_uitew")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khyxg"]
atlas = ExtResource("4_uitew")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jse73"]
atlas = ExtResource("4_uitew")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhi7n"]
atlas = ExtResource("4_uitew")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nle8s"]
atlas = ExtResource("4_uitew")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8x51"]
atlas = ExtResource("4_uitew")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6pewp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaxsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8stl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26xmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2j4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uercj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8xnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vus72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tco28")
}],
"loop": false,
"name": &"attack_one",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cliih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2gok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnorp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba8qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7jmj")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_rvifs")
}],
"loop": false,
"name": &"attack_three",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs04u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1phrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lebdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuka5")
}],
"loop": false,
"name": &"attack_two",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7rf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u5hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6v2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eii6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riox4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw3w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3i25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxx1")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_c5nhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvgke")
}],
"loop": false,
"name": &"attack_up",
"speed": 18.0
}, {
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_7ohus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya12j")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_ab8l7")
}],
"loop": true,
"name": &"breathing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psopo")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_xu7nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyd6y")
}],
"loop": false,
"name": &"jump",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxbe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uitew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20c48")
}],
"loop": false,
"name": &"sheath",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juo2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khyxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jse73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhi7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nle8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8x51")
}],
"loop": true,
"name": &"walking",
"speed": 6.0
}]

[node name="CharacterRonin" type="CharacterBody2D" unique_id=1005983935]
collision_layer = 2
script = ExtResource("1_mwkte")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1318996772]
position = Vector2(-0.5, 3.5)
shape = SubResource("RectangleShape2D_njcak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=113992663]
sprite_frames = SubResource("SpriteFrames_6pewp")
animation = &"attack_up"
frame = 9
frame_progress = 1.0

[node name="ComboTimer" type="Timer" parent="." unique_id=1681577053]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_combo_timer_timeout"]
